Add translation support and 20 language files
- Replace every hardcoded English string in the interface with
  translation keys; the language file grew from 33 entries to 152
- Add 20 language files. Eleven are complete; nine cover menus and
  messages only, with block and item names falling back to English
  until someone contributes them
- Base translated block and item names on Minecraft's own wording
  wherever the game already has a word for something
- Shrink labels to fit their box on the copy screen, the config
  screen, the two confirmation dialogs and the texture screen, so
  a longer translation cannot overflow or run under the previews
- Fix the brush tooltip showing a raw internal name for two of the
  indicator modes
- Fix the missing block dialog sizing its title from a hardcoded
  English width, which would have mis-scaled every translation
- Fix the config screen still naming a switch tier that was
  renamed three versions ago
- Fix the copy screen wrapping block names in square brackets
- Show stored setting values in the brush tooltip in a distinct
  colour so they stand out from their labels
- Combine the migration notes in the README into one section and
  document how to contribute a translation
- Bump version to v1.33-neoforge-1.21.1